# mysql-mcp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  mysql-mcp.example.toml
.beads/: daemon-error  issues.jsonl
.github/workflows/: ci.yml  release.yml
benches/: explain_parsing.rs  permissions.rs  query_execution.rs  sql_parsing.rs
src/: db.rs  e2e_session_tests.rs  e2e_ssh_tests.rs  e2e_test_utils.rs  e2e_tests.rs  lib.rs  main.rs  perf_tests.rs  perf_write_tests.rs  permissions.rs  remote.rs  schema.rs  server.rs  sql_parser.rs  test_helpers.rs  tunnel.rs
src/config/: cli_parser.rs  env_config.rs  merge.rs  mod.rs  tests.rs  toml_config.rs
src/query/: explain.rs  explain_parse.rs  mod.rs  read.rs  retry.rs  write.rs
src/schema/: cache.rs  fetch.rs  introspect.rs  mod.rs  tests.rs
src/server/: error.rs  handlers.rs  mod.rs  sessions.rs  tool_schemas.rs
src/sql_parser/: classify.rs  mod.rs  tests.rs
