[package]
name = "mysql-mcp"
version = "0.1.0"
edition = "2021"
description = "MySQL MCP server - expose MySQL databases via the Model Context Protocol"
license = "MIT"

[[bin]]
name = "mysql-mcp"
path = "src/main.rs"

[lib]
name = "mysql_mcp"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "tls-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenv = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sqlparser = { version = "0.53", features = [] }

[dev-dependencies]
testcontainers-modules = { version = "0.14.0", features = ["mysql"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sql_parsing"
harness = false

[[bench]]
name = "explain_parsing"
harness = false

[[bench]]
name = "permissions"
harness = false

[[bench]]
name = "query_execution"
harness = false
